[package]
name = "test-spl-token-auto-purchase"
version = "0.1.0"
edition = "2021"
description = "Automatic SPL token buyer smart-contract for Solana"
license = "MIT"
repository = "https://github.com/iupiew/test-spl-token-auto-purchase"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []

[dependencies]
pinocchio = "0.4"
pinocchio-token = "0.2"
borsh = { version = "1.5", features = ["derive"] }
thiserror = "1.0"
serde_json = "1.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
solana-client = "1.18.12"
solana-sdk = "1.18.12"
spl-token = "4.0.0"
solana-program-test = "1.18.12"
spl-associated-token-account = "2.3.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

